--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             height: 100vh;
             width: 100vw;
             background-color: #60e1e0;
-            background-image: url('./WhatsApp\ Image\ 2022-07-14\ at\ 12.36.23.jpeg');
+            background-image: url('./1684492218036 (1).jpg');
             background-repeat: no-repeat;
             background-position: right;
             background-size: contain;
@@ -229,10 +229,10 @@
 
         </div>
         <h1>Jefferson Souza</h1>
-        <h2>Desenvolvedor Front-End </h2>
+        <h2>Desenvolvedor</h2>
         <div class="social-media">
             <a href="https://www.linkedin.com/in/jefferson-henrique-de-souza-638b81243/" target="_blank">Linkedin</a>
-            <a href="https://github.com/Je96347671" target="_blank">Github</a>
+            <a href="https://github.com/JeffHenriqueSouza" target="_blank">Github</a>
         </div>
             
     </header>
